# GeometryDebuggerExtension

./: .gitignore  LearningWPF.sln  README.md  imgui.ini
.scipts/: install_geimview.bat  install_glew.bat  install_libpng.bat
.scripts/: .gitignore  build_library.bat  build_main.bat  download_library.bat  install_geomview.bat  install_glew.bat  install_glfw.bat  install_gltool.bat  install_libpng.bat  install_zlib.bat
ContextOpenGL/: ContextOpenGL.cpp  ContextOpenGL.vcxproj
LearningWPF/: ControlHost.cs  LearningWPF.csproj  MainWindow.xaml  MainWindow.xaml.cs
OpenGLLearning/: OpenGLLearning.vcxproj
ReadMemoryMappedFile/: 0x000001fa34da65b0.txt  Circle.h  Circle_circle.txt  Circle_circle2.txt  Circle_circle3.txt  ReadMemoryMappedFile.cpp  ReadMemoryMappedFile.vcxproj  ReadMemoryMappedFile.vcxproj.filters  Vector.h  Vector_Global.txt  Vector_local.txt  circles.txt  circles[1].txt  out.txt  vis_dbg_0x000000465873f200.txt  vis_dbg_0x00000074606ff290.txt  vis_dbg_0x0000007b7c0fee88.txt  vis_dbg_0x000000e92b2feec0.txt  vis_dbg_0x000000e92b2ff010.txt
TempVSIX_1try/: TempVSIX_1tryPackage.cs  source.extension.vsixmanifest
VSIXProject1/: VSIXProject1.csproj  source.extension.cs  source.extension.vsixmanifest
VSIXProject2/: VSIXProject2Package.cs
VSIXProjectHelloWorld/: ClassExample.cs  Command.cs  GD.csproj  UserControl.xaml  UserControl.xaml.cs  VSIXProjectHelloWorld.csproj  VSIXProjectHelloWorldPackage1.cs  (+1 more)
VisualStudio_2022/GLTool/: .gitignore  CMakeLists.txt
VisualStudio_2022/GLTool/include/: GLtool.h
VisualStudio_2022/GLTool/src/: GLtool.cpp  Wrapper.cpp
(+419 files in other folders)
